# portfolio

./: .gitignore  .prettierrc.cjs  .prettierrc.json  README.md  astro.config.mjs  bun.lockb  config.json  justfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  prettier.cjs  tailwind.config.js  tsconfig.json  unocss.config.ts
link-shortener/: README.md  data.ts  index.ts  package.json
resume/: .gitignore  Cargo.toml  README.md  config.toml  cv.typ  data.toml  index.html  projects.toml  resume.typ  utils.typ
resume/src/: compile.rs  main.rs
site/: astro.config.mjs  package.json  tsconfig.json  unocss.config.ts
site/src/: consts.ts  github.ts  icons.ts  og.ts
site/src/components/: BlogPost.astro  HideMenu.tsx  Icons.tsx  Project.astro  TextBackground.astro  TextBackground.tsx
site/src/content/: config.ts
site/src/icons/: Icon.astro  Instagram.astro  (+2 more)
src/: icons.ts  og.ts
src/components/: BaseHead.astro  BlogPost.astro  Footer.astro  Header.astro  HeaderLink.astro  Icons.tsx  NavigateDownBtn.tsx  Project.astro  Projects.astro  Ps1.tsx  Technology.astro  TextBackground.tsx  TextLine.tsx  Wrapper.astro  input.tsx
src/content/: config.ts
src/icons/: Github.astro  Icon.astro  Instagram.astro  Link.astro  Linkedin.astro
src/layouts/: BaseLayout.astro  BlogPost.astro  CombinedLayout.astro
src/pages/: 404.tsx  _app.tsx  index.astro  index.tsx  resume.astro  rss.xml.ts
src/styles/: global.css  ignored.css
src/technology/: TechnologyCard.astro  technologies.ts
src/utils/: api.ts  commandExists.ts  shell.ts  tabCompletion.ts
(+28 files in other folders)
