[package]
name = "resume"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
comemo = "0.4.0"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shellexpand = "3.1.0"
tiny_http = "0.12.0"
toml = "0.8.19"
typst = "0.12.0"
typst-pdf = "0.12.0"
